new proj/src/objects/GE_ES_Price_Management__c.object
<CustomObject>
    <fields>
        <fullName>GE_ES_DOA_Level__c</fullName>
        <label>DOA Level</label>
        <picklist>
            <picklistValues>
                <fullName>Level 0</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Level 1</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Level 2</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Level 3</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Level 4</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Level 5</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>GE_ES_Is_BMQuote_PD__c</fullName>
        <defaultValue>false</defaultValue>
        <description>this field set flag for price deviation level is from Big Machine</description>
        <label>Is BMQuote PD</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>GE_ES_Lead_DOA__c</fullName>
        <label>Lead DOA</label>
        <picklist>
            <picklistValues>
                <fullName>Level 0</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Level 1</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Level 2</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Level 3</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Level 4</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Level 5</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>GE_ES_P_L1__c</fullName>
        <label>P&amp;L</label>
        <picklist>
            <picklistValues>
                <fullName>DE</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Dresser</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Env</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>IS</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>MCS</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>PGS</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>GE_ES_P_L__c</fullName>
        <description>This field in referenced from Opportunity</description>
        <formula>Opportunity__r.Lead_PL__r.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>P&amp;L</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>GE_ES_Price_DOA_Category__c</fullName>
        <label>Price DOA Category</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>GE_ES_Sub_P_L__c</fullName>
        <description>P&amp;L will be populate from Opportunity Product</description>
        <label>Sub P&amp;L</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>GE_ES_Total_Aggregate_Price__c</fullName>
        <description>To sum up the total aggregate of Productlineitem for DOA Category</description>
        <label>Total Aggregate Price</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>GE_HQ_SFDC_LEGACY_ID__c</fullName>
        <caseSensitive>true</caseSensitive>
        <externalId>true</externalId>
        <label>SFDC Legacy ID</label>
        <length>18</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Opportunity_Product_Id__c</fullName>
        <label>Opportunity Product Id</label>
        <length>20</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Opportunity__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Pricing Deviation will be chind to Opportunity</description>
        <label>Opportunity</label>
        <referenceTo>Opportunity</referenceTo>
        <relationshipLabel>Price Management</relationshipLabel>
        <relationshipName>Price_Management</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Price Management</label>
    <nameField>
        <displayFormat>PD -{000000}</displayFormat>
        <label>Price Deviation No.</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Price Management</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
    <validationRules>
        <fullName>GE_ES_IsBMQuoteChecked</fullName>
        <active>false</active>
        <description>this validation will help to prevent the user to change the DOA level if Quote is coming from big machine</description>
        <errorConditionFormula>AND(GE_ES_Is_BMQuote_PD__c=true, ISCHANGED(GE_ES_DOA_Level__c) )</errorConditionFormula>
        <errorMessage>DOA Level can&apos;t be changed, if level is provided by the Big Machine Quote</errorMessage>
    </validationRules>
</CustomObject>